--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         </div>
         <div class="wrapper">
-            <span>HI CRUSH!</span>
-            <span>WILL YOU GO OUT WITH ME?</span>
+            <span>HI Angel !</span>
+            <span>Sagutin mo na ko :></span>
              <div class="buttons">
                  <button id="no_trigger" class="btn no">No</button>
                  <a href="./nice.html">
