--- a/nice.html
+++ b/nice.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <div class="main">
-        <audio autoplay src="./music/Super Mario 64 music_ Rainbow ride.mp3" id="audio"></audio>
+        <audio autoplay loop="loop" src="./music/Super Mario 64 music_ Rainbow ride.mp3" id="audio"></audio>
+        <!-- <audio id="audioplayer" src="audio/muzyka_meed_loop.mp3" type="audio/mpeg" loop="loop"> </audio> -->
         <div id="smiley" class="image">
             <img src="./img/kindpng_966473.png" alt="">
         </div>
@@ -24,15 +25,19 @@
             <img src="./img/5859b173711f64423aa5e050.png" alt="">
         </div>
         <div class="wrapper">
-            <span>Nice One!!!</span>
-            <span>HAHHAHAHAHAHAH !!!</span>
+            <span>YEYYY I LOVE YOU :></span>
           
         </div>
     </div>
     
 
     <script>
+    const audio = document.querySelector('#audio');
 
+
+    window.onload = function() {
+        audio.play();
+    }
     </script>
 </body>
 </html>
